--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,12 +15,17 @@
         <activity
             android:name=".MainActivity"
             android:exported="true">
+
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
+        <!--> Todos nuestros activities tienen que ir aqui <-->
+        <activity android:name="OlvidarPasswordActivity" />
+        <activity android:name="HomeActivity" />
     </application>
 
 </manifest>
